# source_code

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
3d_object_reconstruction/: Octomap.md  README.md
6d_pose_estimation/: README.md  kinematics.md
ML/image/:  deep_learning_for_vision_systems.md
ML/theory/:  deep-learning-from-scratch.md  DLFS.md  deep-learning-from-scratch-2.md
OSS_project/: README.md
OSS_project/phantoscope/: README.md
OSS_project/tvm/: README.md  gcv_alpha_pose.py  gcv_resnet18_v1.py  gcv_ssd_512_resnet50_v1_voc.py  gcv_tune_relay_cuda.py  note.md  pose_benchmark.md  tune_conv2d_cuda.py  tune_relay_cuda.py  tvm_ssd_512_resnet50_v1_voc.py
OSS_project/yolov4/: README.md
competition/202204.toppan_ocr/: README.md
competition/202206.tanachou/: README.md
competition/202301.ocean180/: using_LightGBM.ipynb  using_augogluon.ipynb
competition/202303.kaggle-playground-series-s3e10/: 01_feature_engineering.ipynb  02_dataset_overview.ipynb  03_using_augogluon.ipynb  README.md  feature_importances.csv
face_tracking/src/: docker-compose.yml
interesting_thing/: 0005_psychology_learning.md  6-Sigma.md  README.md
others/: README.md
pcl/: CMakeLists.txt  pcd_read.cpp
pcl_obj_detection/: CMakeLists.txt  global_hypothesis_verification.cpp  rs_to_pcl.cpp
rs_pcl_segmentation/: c44_namespace.hpp  rs_pcl_segmentation.cpp
toy_projects/pcl/rs_pcl_segmentation/: CMakeLists.txt  c44_namespace.cpp
tvm/: README.md  demo_cifar10.py  gcv_alpha_pose.py  gcv_tune_relay_cuda.py  note.md  pose_benchmark.md  tune_relay_cuda.py  tvm_resnet18_v1.py
yolo_v4/: README.md  demo_rs2.py  demo_wc.py  test_yolov4_v0.ipynb
yolov4/: README.md
(+124 files in other folders)
